# project-echoes

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: benchmark.yaml  corpora.yaml  greek_ingestion.yaml  hebrew_ingestion.yaml  models.yaml  normalization.yaml  review.yaml  scoring.yaml  segmentation.yaml
config/experiments/: cross_testament.yaml  known_link_recovery.yaml  lexical_baseline.yaml  pauline_case_study.yaml  semantic_baseline.yaml  whole_canon.yaml
data/alignments/: oshb-macula-crosswalk.yaml
data/benchmarks/: tier1_quotations.csv
data/manifests/: sources.yaml
data/review/: literature_matrix.csv
docs/: benchmark-design.md  benchmark-schema.md  canonical-token-schema.md  corpus-scope.md  data-licensing.md  data-sources.md  experiment-log.md  limitations.md  master-plan.md  methodology.md  milestone-4-execution-plan.md  normalization.md  novelty-review.md  passage-schema.md  prior-projects.md  research-charter.md  scoring.md  segmentation.md  tier1-quotation-curation.md  versification-crosswalk.md
docs/decisions/: 0001-primary-corpus-boundary.md  0002-layered-corpus-strategy.md  0003-no-llm-primary-discovery.md  0004-local-first-architecture.md  0005-macula-hebrew-source-selection.md  (+10 more)
scripts/: generate_m5_report.py  generate_m5_spot_check_evidence.py  generate_m6_report.py  generate_m6_spot_check_evidence.py  generate_milestone3_report.py  regenerate_milestone2_report.py
tests/: conftest.py
(+172 files in other folders)
