[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "project-echoes"
version = "0.1.0"
description = "Reproducible computational biblical-studies research infrastructure"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Project Echoes contributors" }]
dependencies = [
  "duckdb==1.5.4",
  "polars==1.42.1",
  "pyarrow==25.0.0",
  "pydantic==2.13.4",
  "pyyaml==6.0.3",
  "typer==0.26.8",
]

[project.scripts]
echoes = "echoes.cli:app"

[dependency-groups]
dev = [
  "mypy==2.2.0",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "types-pyyaml==6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/echoes"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", ".venv", "data", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
markers = [
  "full_corpus: requires a locally acquired and processed full corpus; never runs in normal CI",
]

[tool.uv]
required-version = "==0.11.28"
default-groups = ["dev"]
